feat(master): ✨ implement authentication service layer and database schema
- add database migrations for auth tables and user fields
- create service layer for 2FA, OAuth, phone verification, SMS, avatars
- update User model with relationships and helper methods
- configure OAuth providers, Twilio SMS, and 2FA settings
- add required composer dependencies for authentication features
- bind SMS service interface to Twilio provider in AppServiceProvider

--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,26 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# OAuth Providers
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost/auth/google/callback
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URI=http://localhost/auth/facebook/callback
+APPLE_CLIENT_ID=
+APPLE_CLIENT_SECRET=
+APPLE_REDIRECT_URI=http://localhost/auth/apple/callback
+
+# SMS Gateway (Twilio)
+SMS_DRIVER=twilio
+TWILIO_SID=
+TWILIO_TOKEN=
+TWILIO_FROM=
+
+# Two-Factor Authentication
+TWO_FACTOR_OTP_EXPIRY=10
+TWO_FACTOR_RECOVERY_CODE_COUNT=8
+TWO_FACTOR_TOTP_WINDOW=1
+
 VITE_APP_NAME="${APP_NAME}"
