--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,15 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
+        "intervention/image": "^3.11",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.0"
+        "pragmarx/google2fa": "^9.0",
+        "tightenco/ziggy": "^2.0",
+        "twilio/sdk": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
