feat(master): ✨ finalize authentication system with comprehensive tests and documentation
- Add feature flags for phone auth, OAuth, and 2FA rollout
- Create complete documentation (AUTH, SMS_GATEWAY, OAUTH_SETUP, DEPLOYMENT)
- Implement comprehensive test suites for all auth flows
- Apply PSR-12 code formatting and cleanup imports
- Move rate limiting from separate file to AppServiceProvider
- Update README with new dependencies and setup instructions
- Mark all implementation tasks as completed in project tracker

--- a/.env.example
+++ b/.env.example
@@ -84,4 +84,9 @@ TWO_FACTOR_OTP_EXPIRY=10
 TWO_FACTOR_RECOVERY_CODE_COUNT=8
 TWO_FACTOR_TOTP_WINDOW=1
 
+# Feature Flags
+ENABLE_PHONE_AUTH=false
+ENABLE_OAUTH_AUTH=false
+ENABLE_2FA=false
+
 VITE_APP_NAME="${APP_NAME}"
