--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@tailwindcss/typography": "^0.5.19",
+        "@tiptap/react": "^3.20.0",
+        "@tiptap/starter-kit": "^3.20.0",
         "qrcode.react": "^4.2.0",
-        "react-phone-number-input": "^3.4.16"
+        "react-phone-number-input": "^3.4.16",
+        "recharts": "^3.7.0"
     }
 }
