feat(master): ✨ add KYC verification system
- create KYC models, enums, and database migrations
- implement KycVerificationService with manual provider
- add KYC controller with document upload and review routes
- create KYC middleware for verification enforcement
- add expiry checking job and scheduled task
- implement notifications for KYC status changes
- add audit logging for KYC events
- configure private filesystem disk for KYC documents
- add TypeScript types and React components
- update User model with KYC helper methods

--- a/.env.example
+++ b/.env.example
@@ -84,6 +84,12 @@ TWO_FACTOR_OTP_EXPIRY=10
 TWO_FACTOR_RECOVERY_CODE_COUNT=8
 TWO_FACTOR_TOTP_WINDOW=1
 
+# KYC Verification
+KYC_PROVIDER=manual
+KYC_DEFAULT_JURISDICTION=MY
+KYC_EXPIRY_PERIOD_DAYS=365
+KYC_STORAGE_DRIVER=local
+
 # Feature Flags
 ENABLE_PHONE_AUTH=false
 ENABLE_OAUTH_AUTH=false
