--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Google Maps
+GOOGLE_MAPS_API_KEY=
+
 # OAuth Providers
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
