--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@react-google-maps/api": "^2.20.8",
         "@tailwindcss/typography": "^0.5.19",
         "@tiptap/react": "^3.20.0",
         "@tiptap/starter-kit": "^3.20.0",
