--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 # Google Maps
 GOOGLE_MAPS_API_KEY=
 
+# OpenWeatherMap
+OPENWEATHERMAP_API_KEY=
+
 # OAuth Providers
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
